tests/k8s_testcases/network-policy-checks-bad-path/spec_podselector_wrong_keys.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spec-podselector-test-keys
  namespace: kube-system
spec:
  # wrong keys:
  podSelector:
    from:
        namespaceSelector: { }
        podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
